# data-visor

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: config.py  dependencies.py  main.py
app/ingestion/: base_parser.py  classification_jsonl_parser.py  classification_prediction_parser.py  coco_parser.py  detection_annotation_parser.py  prediction_parser.py
app/models/: agent.py  annotation.py  annotation_triage.py  classification_evaluation.py  dataset.py  embedding.py  error_analysis.py  evaluation.py  prediction.py  sample.py  scan.py  similarity.py  statistics.py  triage.py  view.py
app/plugins/: base_plugin.py  hooks.py  registry.py
app/repositories/: duckdb_repo.py  storage.py
app/routers/: _run_name.py  agent.py  annotation_triage.py  annotations.py  datasets.py  embeddings.py  images.py  ingestion.py  samples.py  similarity.py  (+4 more)
docs/: deployment.md
frontend/: README.md  next.config.ts  package-lock.json  package.json
scripts/: deploy-gcp.sh  run-local.sh  vm-startup.sh
tests/: conftest.py  test_coco_parser.py  test_health.py  test_images.py  test_ingestion.py  test_plugins.py  test_prediction_import.py  test_samples_api.py
(+248 files in other folders)
