[project]
name = "data-visor"
version = "0.1.0"
description = "VisionLens - Unified CV dataset introspection tool"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.4.4",
    "fastapi>=0.128.7",
    "fsspec>=2026.2.0",
    "gcsfs>=2026.2.0",
    "ijson>=3.4.0.post0",
    "pandas>=3.0.0",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "supervision>=0.27.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
